--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3,7 +3,10 @@ body{
     flex-direction: column;
     align-items: center;
     font-family: Arial;
-    color: #000000;
+    color: #991313;
+    background-image: url('images/bc2.jpg'); /* Replace 'path/to/background.jpg' with your image path */
+    background-size: cover; /* Ensures the background image covers the entire viewport */
+    background-position: center;
 }
 
 .content{
