--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/style.css') }}">
 </head>
 <body style=" 
-     background-image: url('{{ url_for('static', filename='images/bc2.jpg') }}');
+     background-image: url('{{ url_for('static', filename='images/bc3.jpeg') }}');
     background-size: cover;
     background-position: 0 -120px;">
     <header
