--- a/templates/index.html
+++ b/templates/index.html
@@ -45,7 +45,7 @@
                     resultDiv.innerHTML = '<p>Error: ' + data.error + '</p>';
                 } else {
                     resultDiv.innerHTML = '<p>Predicted Disease: ' + data.result + '</p>' +
-                                          '<p>Remedy: ' + data.remedy + '</p>';
+                                          '<p>Symptoms: ' + data.remedy + '</p>';
                 }
             })
             .catch(error => {
