login signup firebase added

--- a/templates/index.html
+++ b/templates/index.html
@@ -45,7 +45,7 @@
     </header>
     <main>
         <div class="container">
-            <form action="/predict" method="POST" enctype="multipart/form-data" id="prediction-form">
+            <form action="/predict-disease" method="POST" enctype="multipart/form-data" id="prediction-form">
                 <label for="file-upload">
                     <input id="file-upload" type="file" name="file" accept=".jpg, .jpeg, .png" onchange="validateImage(this)">
                     Choose File 
